WIP: added ml_service into .env, new endpoints for record
