# internal/router/api/article_routes.go
@@ -19,15 +19,8 @@ func InitArticleRoutes(r *gin.Engine, db *database.Database) {
 		router.GET("/:record_id/main", GetMainArticleByRecordID)
 		router.GET("/:record_id/all", GetArticlesForRecord)
 		router.POST("/:record_id/is_main", SetIsMainArticle)
-		// router.POST("/alternative", CreateAlternativeArticleWithRecordID)
 		router.POST("/:record_id", CreateArticleWithRecordID)
-		router.GET("/:record_id/video_link", GetVideoLinkForArticleByRecordID)
 	}
-
-	// router_ml := r.Group("/api/v1/article")
-	// router_ml.Use(middlewares.JwtAuth())
-	// router_ml.Use(middlewares.DbSession(db, 60000))
-	// router_ml.POST("/:record_id", CreateArticleWithRecordID)
 }
 
 // CreateArticleWithRecordID godoc
@@ -188,73 +181,3 @@ func SetIsMainArticle(c *gin.Context) {
 
 	c.JSON(http.StatusNoContent, "Article set as main")
 }
-
-// GetVideoLinkForArticleByRecordID godoc
-//
-//	@Summary		Get video link
-//	@Description	Get video link for article by record_id
-//	@Tags			article
-//	@Accept			json
-//	@Produce		json
-//	@Param			record_id	path	uint	true	"Record id"
-//	@Security		Bearer
-//	@Success		200	{object}	string	"Video link"
-//	@Failure		403	{object}	string	"Forbidden"
-//	@Failure		404	{object}	string	"Article not found"
-//	@Failure		422	{object}	string	"Unprocessable entity"
-//	@Router			/api/v1/article/{record_id}/video_link [get]
-func GetVideoLinkForArticleByRecordID(c *gin.Context) {
-	recordID, err := strconv.ParseUint(c.Param("record_id"), 10, 32)
-	if err != nil {
-		c.JSON(http.StatusUnprocessableEntity, err.Error())
-		return
-	}
-
-	videoLink, err := service.GetVideoLinkForArticleByRecordID(c, uint(recordID))
-	if err != nil {
-		if err.Error() == "forbidden" {
-			c.JSON(http.StatusForbidden, err.Error())
-			return
-		} else {
-			c.JSON(http.StatusNotFound, err.Error())
-			return
-		}
-	}
-
-	c.JSON(http.StatusOK, videoLink)
-}
-
-// // CreateAlternativeArticleWithRecordID godoc
-// //
-// //	@Summary		Create alternative article
-// //	@Description	Create alternative article for record by record_id
-// //	@Tags			article
-// //	@Accept			json
-// //	@Produce		json
-// //	@Param			article	body	models.ArticleCreate	true	"Article info for create"
-// //	@Security		Bearer
-// //	@Success		200	{object}	string	"Article created"
-// //	@Failure		403	{object}	string	"Forbidden"
-// //	@Failure		404	{object}	string	"Article not found"
-// //	@Failure		422	{object}	string	"Unprocessable entity"
-// //	@Router			/api/v1/article/alternative [post]
-// func CreateAlternativeArticleWithRecordID(c *gin.Context) {
-// 	var articleData models.ArticleCreate
-// 	if err := c.ShouldBindJSON(&articleData); err != nil {
-// 		c.JSON(http.StatusUnprocessableEntity, err.Error())
-// 		return
-// 	}
-
-// 	article, err := service.CreateAlternativeArticleWithRecordID(c, articleData)
-// 	if err != nil {
-// 		if err.Error() == "forbidden" {
-// 			c.JSON(http.StatusForbidden, err.Error())
-// 			return
-// 		} else {
-// 			c.JSON(http.StatusNotFound, err.Error())
-// 			return
-// 		}
-// 	}
-
-// 	c.JSON(http.StatusOK, article)
-// }
